﻿shmuel 14.01.2015 00:19:06 +0200 - build 472

1. Рефакторинг.

shmuel 13.01.2015 19:29:57 +0200 - build 471

1. Рефакторинг, уточнения.

shmuel 12.01.2015 20:52:17 +0200 - build 470

1. Уточнение 465.1.

2. Уточнение 469.

3. Рефакторинг.

shmuel 11.01.2015 19:58:26 +0200 - build 469

1. Рефакторинг.

shmuel 07.01.2015 10:26:06 +0200 - build 468

1. LuaFAR: добавлена функция win.OutputDebugString.

shmuel 06.01.2015 23:42:23 +0200 - build 467

1. Уточнение 465.1.

shmuel 06.01.2015 18:27:55 +0200 - build 466

1. Уточнение 465.1.

shmuel 03.01.2015 21:20:32 +0200 - build 465

1. eval(S,2) снова, как это было до перевода макросистемы на Lua, запускает на исполнение
   соответствующий макрос, а не просто вызывает его функцию 'action'.

2. Рефакторинг.

shmuel 01.01.2015 20:34:10 +0200 - build 464

1. Рефакторинг.

shmuel 31.12.2014 00:11:10 +0200 - build 463

1. Far.DisableHistory(-1) не запрещал добавления в историю при последующих вызовах Panel.SetPath().

2. Рефакторинг.

shmuel 26.12.2014 19:26:13 +0200 - build 462

1. Рефакторинг: прекращено использование фаровских регулярных выражений для внутренних нужд плагина.

shmuel 15.12.2014 00:46:09 +0200 - build 461

1. LuaFAR: добавлена обработка функций export.GetContentFields и export.GetContentData.

zg 06.12.2014 00:17:49 +0200 - build 460

1. Panel.AddCustomDataCallback удалена.

zg 03.12.2014 17:52:55 +0200 - build 459

1. уточнение 457. данные для одной и той же колонки не замещают друг друга, а склеиваются.

zg 03.12.2014 11:22:55 +0200 - build 458

1. в обработчик Panel.AddCustomDataCallback данные приходят в виде {guid="строка"}.

zg 03.12.2014 03:57:46 +0200 - build 457

1. экспериментально. продолжение 456. поддержка колонок C1-C9.

zg 30.11.2014 12:05:23 +0200 - build 456

1. Panel.AddCustomDataCallback: добавляет новый обработчик данных для кастом колонок.

zg 29.11.2014 13:27:38 +0200 - build 455

1. уточнение поддержки UTF-8 BOM для moonscript.

shmuel 28.11.2014 20:27:54 +0200 - build 454
