@@ -19,7 +19,7 @@ int bit64_pushuserdata(lua_State *L, INT64 v)
 
 int bit64_push(lua_State *L, INT64 v)
 {
-	if((v >= 0 && v <= MAX53) || (v < 0 && -v <= MAX53))
+	if((v >= 0 && v <= MAX53) || (v < 0 && v >= -MAX53))
 		lua_pushnumber(L, (double)v);
 	else
 		bit64_pushuserdata(L, v);
@@ -119,21 +119,21 @@ static int bnot(lua_State *L)
 static int lshift(lua_State *L)
 {
 	UINT64 v = check64(L, 1, NULL);
-	unsigned int n = luaL_checkinteger(L, 2) & 63;
+	unsigned int n = luaL_checkinteger(L, 2);
 	return bit64_push(L, v << n);
 }
 
 static int rshift(lua_State *L)
 {
 	UINT64 v = check64(L, 1, NULL);
-	unsigned int n = luaL_checkinteger(L, 2) & 63;
+	unsigned int n = luaL_checkinteger(L, 2);
 	return bit64_push(L, v >> n);
 }
 
 static int arshift(lua_State *L)
 {
 	INT64 v = check64(L, 1, NULL);
-	unsigned int n = luaL_checkinteger(L, 2) & 63;
+	unsigned int n = luaL_checkinteger(L, 2);
 	return bit64_push(L, v >> n);
 }
 
