@@ -1,4 +1,8 @@
-﻿shmuel 14.01.2015 00:19:06 +0200 - build 472
+﻿shmuel 15.01.2015 16:59:48 +0200 - build 473
+
+1. LuaFAR: исправлены два бага в библиотеке bit64.
+
+shmuel 14.01.2015 00:19:06 +0200 - build 472
 
 1. Рефакторинг.
 
